@@ -1,5 +1,5 @@
-<ul class="menu0">
-<?php
+<?php  // -*- php -*-
+
 $rootdir = ".";
 switch(basename(dirname($_SERVER['SCRIPT_NAME']))) {
     case "admin":
@@ -8,11 +8,13 @@ switch(basename(dirname($_SERVER['SCRIPT_NAME']))) {
         $rootdir = "..";
 	break;
 }
+
+printf("<ul class=\"menu0\">\n");
+printf("<li><a href=\"%s/index.php\" class=\"menubarlink\">%s</a></li>\n", $rootdir, _("Start"));
+printf("<li><a href=\"%s/exam/\"     class=\"menubarlink\">%s</a></li>\n", $rootdir, _("Examination"));
+printf("<li><a href=\"%s/help.php\"  class=\"menubarlink\">%s</a></li>\n", $rootdir, _("Help"));
+printf("<li><a href=\"%s/about.php\" class=\"menubarlink\">%s</a></li>\n", $rootdir, _("About"));
+printf("</ul>\n");
+
 ?>
-<li><a href="<?php echo "$rootdir/index.php\""; ?> class="menubarlink"><?php echo _("Start"); ?></a></li>
-<li><a href="<?php echo "$rootdir/exam/\""; ?> class="menubarlink"><?php echo _("Examination"); ?></a></li>
-<li><a href="<?php echo "$rootdir/help.php\""; ?> class="menubarlink"><?php echo _("Help"); ?></a></li>
-<li><a href="<?php echo "$rootdir/about.php\""; ?> class="menubarlink"><?php echo _("About"); ?></a></li>
-<li><a href="<?php echo "$rootdir/teacher/\""; ?> class="menubarlink"><?php echo _("Teacher"); ?></a></li>
-<li><a href="<?php echo "$rootdir/admin/\""; ?> class="menubarlink"><?php echo _("Admin"); ?></a></li>
-</ul>
+
