@@ -13,6 +13,10 @@ Version 1.5.3 (2010-mm-dd):
 	* Added the pseudo role corrector. People get this role by
 	  being assigned as the corrector of answers to one or more
 	  questions (currently, only the exam creator can grant this role).
+	  
+	* Top menus are hidden once an examination gets selected (in
+	  teacher section). New menus bound to selected examination
+	  appears in left side instead.
 	
 Version 1.5.2 (2010-06-02):
 
